Layout issues.

--- a/css_includes/global_main.css
+++ b/css_includes/global_main.css
@@ -3,6 +3,7 @@ body {
     background-color: white;
     margin-left: 0;
     margin-top: 5em;
+    font-family: 'Source Code Pro';
 }
 .lindent { margin-left: 5em; }
 .sending-results {
